[package]
name = "decent-serde-toml-derive-alternative"
version = "0.1.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"
decent-synquote-alternative = { git = "https://git.sr.ht/~loic/decent-synquote-alternative", branch = "master" }
# decent-toml-rs-alternative = { path = "../decent-toml-rs-alternative" }
