[package]
name = "decent-serde-toml-derive-alternative"
version = "0.1.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2018"
license = "MIT"
repository = "https://git.sr.ht/~loic/decent-serde-toml-derive-alternative"
description = "A derive proc-macro for the FromToml and ToToml traits defined by the decent-toml-rs-alternative crate. It compiles quickly but is not as robust or flexible as the serde_derive proc-macro. Sometimes it is enough."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"

[dependencies.decent-synquote-alternative]
version = "0.1"
